--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "mesvaleurs",
   "version": "0.0.1",
-  "description": "A Quasar Framework app",
-  "productName": "Quasar App",
+  "description": "Identifier mes valeurs",
+  "productName": "Identifier mes valeurs",
   "author": "FabriceSALAH <fabrice.salah@gmail.com>",
   "private": true,
   "scripts": {
