--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "echo \"No test specified\" && exit 0",
     "build": "quasar build",
     "start": "node server.js",
-    "heroku-postbuild": "yarn && yarn build"
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
     "@quasar/cli": "^1.1.0",
